--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- TODO: Add proper viewport meta tag to make page properly display on mobile devices. -->
 
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Tidying North">
+  <meta name="author" content="Kendal Smith">
 
-  <title>Modern Business - Start Bootstrap Template</title>
-
+  <title>Tidying North</title>
+<link rel="shortcut icon" href="images/faviconcompass.png" type="image/x-icon">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,6 +23,30 @@
 
 <body>
 
+    <!-- Navigation -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Tidying North</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="404.html">404</a>
+            </li>
+          </ul>
+     </div>
+    </nav>
   <!-- (1)Navigation -->
   <!-- TODO implement responsive navigation that matches your IA design -->
   <!-- TODO put this nav on every page -->
@@ -44,24 +68,24 @@
 
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item active" style="background-image: url('images/peonywithcoffee.jpeg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>First Slide</h3>
-            <p>This is a description for the first slide.</p>
+            <h3>Spark Joy</h3>
+            <p></p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('images/caroselcloset.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
-            <p>This is a description for the second slide.</p>
+            <h3>Spark Joy</h3>
+            <p></p>
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('images/carouselcloset2.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
+            <h3>Spark Joy</h3>
+            <p></p>
           </div>
         </div>
       </div>
@@ -129,10 +153,10 @@
     <h2>Portfolio Heading</h2>
 
     <div class="row">
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-m-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/konmaribed.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -143,10 +167,10 @@
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-m-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/project5.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -157,10 +181,10 @@
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-m-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/konmariclothescloset.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -171,10 +195,10 @@
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-m-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/project2.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -185,10 +209,10 @@
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-m-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/project4.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -199,10 +223,10 @@
           </div>
         </div>
       </div>
-      <div class="portfolio-item">
+      <div class="portfolio-item col-sm-6 col-m-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x450" alt="">
+            <img class="card-img-top" src="images/project3.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
@@ -234,7 +258,7 @@
         </p>
       </div>
       <div class="col-lg-6">
-        <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
+        <img class="img-fluid rounded" src="images/project6.jpg" alt="">
       </div>
     </div>
     <!-- /.row -->
@@ -262,7 +286,7 @@
       Put the footer on every page.
     -->
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Kendal Smith 2018</p>
     </div>
     <!-- /.container -->
   </footer>
