--- a/index.html
+++ b/index.html
@@ -286,7 +286,10 @@
       Put the footer on every page.
     -->
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Kendal Smith 2018</p>
+      <div
+      <p class="m-0  text-white">Copyright &copy; Tidying North 2018</p>
+       <p class="m-0 text-white">Kendal Smith</p>
+    </div>
     </div>
     <!-- /.container -->
   </footer>
