--- a/contact.html
+++ b/contact.html
@@ -66,22 +66,22 @@
         <!-- Map Column -->
         <div class="col-lg-8 mb-4">
           <!-- Embedded Google Map -->
-          <iframe width="100%" height="400px" href="https://www.google.com/maps/place/Can+Can/@47.6088847,-122.3425844,17z/data=!3m1!4b1!4m5!3m4!1s0x54906ab2f98ca1b7:0x9eaaa2fb90acea18!8m2!3d47.6088847!4d-122.3403957" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/place/Can+Can/@47.6088847,-122.3425844,17z/data=!3m1!4b1!4m5!3m4!1s0x54906ab2f98ca1b7:0x9eaaa2fb90acea18!8m2!3d47.6088847!4d-122.3403957"></iframe>
         </div>
         <!-- Contact Details Column -->
         <div class="col-lg-4 mb-4">
           <h3>Contact Details</h3>
           <p>
-            3481 Melrose Place
-            <br>Beverly Hills, CA 90210
+            901 12th Avenue, P.O. Box 222000
+            <br>Seattle, WA 98122 
             <br>
           </p>
           <p>
-            <abbr title="Phone">P</abbr>: (123) 456-7890
+            <abbr title="Phone">P</abbr>: (206)296.6000
           </p>
           <p>
             <abbr title="Email">E</abbr>:
-            <a href="mailto:name@example.com">name@example.com
+            <a href="mailto:name@example.com">smithk6@seattleu.edu
             </a>
           </p>
           <p>
@@ -135,12 +135,17 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Kendal Smith 2018</p>
+   <footer class="py-5 bg-dark">
+
+   
+    <div class="container">
+      <div <p class="m-0  text-white">Copyright &copy; Tidying North 2018</p>
+        <p class="m-0 text-white">Kendal Smith</p>
       </div>
-      <!-- /.container -->
-    </footer>
+    </div>
+
+    <!-- /.container -->
+  </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
