--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
       <div class="portfolio-item col-sm-6 col-m-4">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="images/project2.jpg" alt="">
+            <img class="card-img-top" src="images/project1.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Four 600x400 instead of 700x400</a>
+              <a href="#">Project Four</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
               varius vitae.</p>
@@ -291,6 +291,7 @@
        <p class="m-0 text-white">Kendal Smith</p>
     </div>
     </div>
+  
     <!-- /.container -->
   </footer>
 
