--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
         <img class="img-fluid rounded mb-4" src="images/konmarisf18group.jpg" alt="">
       </div>
       <div class="col-lg-6">
-        <h2>About Modern Business</h2>
+        <h2>About Tidying North</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
@@ -79,10 +79,10 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/ourteam4.jpg" alt="">
+          <img class="card-img-top" src="images/profile.jpeg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <h4 class="card-title">Kendal</h4>
+            <h6 class="card-subtitle mb-2 text-muted">CFO</h6>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
           </div>
           <div class="card-footer">
@@ -92,10 +92,10 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/ourteam2.jpg" alt="">
+          <img class="card-img-top" src="images/ourteam1.jpeg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <h4 class="card-title">Anne</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Lead Designer</h6>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
           </div>
           <div class="card-footer">
@@ -105,10 +105,10 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="images/ourteam3.jpg" alt="">
+          <img class="card-img-top" src="images/teammember3.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
+            <h4 class="card-title">Vipin</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Lead Developer</h6>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
           </div>
           <div class="card-footer">
@@ -119,7 +119,7 @@
     </div>
     <!-- /.row -->
 
-    
+
     <!-- /.row -->
 
   </div>
@@ -127,10 +127,11 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
-   
+
     <div class="container">
-      <div <p class="m-0  text-white">Copyright &copy; Tidying North 2018</p>
-        <p class="m-0 text-white">Kendal Smith</p>
+      <div class="footer-flex">
+        <p class="footer-item-flex text-white">Copyright &copy; Tidying North 2018</p>
+        <p class="footer-item-flex text-white">Kendal Smith</p>
       </div>
     </div>
 
