--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -66,7 +66,7 @@
         <!-- Map Column -->
         <div class="col-lg-8 mb-4">
           <!-- Embedded Google Map -->
-          <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/place/Can+Can/@47.6088847,-122.3425844,17z/data=!3m1!4b1!4m5!3m4!1s0x54906ab2f98ca1b7:0x9eaaa2fb90acea18!8m2!3d47.6088847!4d-122.3403957"></iframe>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10759.548447945568!2d-122.3403957!3d47.6088847!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9eaaa2fb90acea18!2sCan+Can!5e0!3m2!1sen!2sus!4v1519954227933" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>></iframe>
         </div>
         <!-- Contact Details Column -->
         <div class="col-lg-4 mb-4">
@@ -139,8 +139,9 @@
 
    
     <div class="container">
-      <div <p class="m-0  text-white">Copyright &copy; Tidying North 2018</p>
-        <p class="m-0 text-white">Kendal Smith</p>
+      <div class="footer-flex">
+           <p class="footer-item-flex text-white">Copyright &copy; Tidying North 2018</p>
+        <p class="footer-item-flex text-white">Kendal Smith</p>
       </div>
     </div>
 
