--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
-
+<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -108,10 +108,11 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
 
-  
+
     <div class="container">
-      <div <p class="m-0  text-white">Copyright &copy; Tidying North 2018</p>
-        <p class="m-0 text-white">Kendal Smith</p>
+      <div class="footer-flex">
+        <p class="footer-item-flex text-white">Copyright &copy; Tidying North 2018</p>
+        <p class="footer-item-flex text-white">Kendal Smith</p>
       </div>
     </div>
 
